--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,9 @@ a:link:hover{
     color: #f04688;
     font-size: 16px;
 }
+
+@media only screen and (max-width:650px){
+    iframe{
+        width: 75vw;
+    }
+}
